demo/src/main/java/com/example/demo/errors/SortDoesNotExistException.java
package com.example.demo.errors;

public class SortDoesNotExistException extends RuntimeException{
    public SortDoesNotExistException(String sort){
        super(String.format("Sort '%s' does not exist", sort));
    }
}
